--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -168,9 +168,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainRadius.svg&amp;filetimestamp=20240101173607&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainRadius.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainRadius.html" title="Sketcher ConstrainRadius">Rozm&#283;r polom&#283;ru</a>: Ur&#269;uje polom&#283;r kruh&#367;, oblouk&#367; a kruh&#367; s v&aacute;hou B-spline.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainDiameter.svg&amp;filetimestamp=20240101173623&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainDiameter.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDiameter.html" title="Sketcher ConstrainDiameter">Rozm&#283;r pr&#367;m&#283;ru</a>: Ur&#269;uje pr&#367;m&#283;r kruh&#367; a oblouk&#367;.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainAngle.svg&amp;filetimestamp=20240101173744&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainAngle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainAngle.html" title="Sketcher ConstrainAngle">Rozm&#283;r &uacute;hlu</a>: Ur&#269;uje &uacute;hel mezi dv&#283;ma hranami, &uacute;hel p&#345;&iacute;mky s vodorovnou osou n&aacute;&#269;rtu nebo &uacute;hel otev&#345;en&iacute; kruhov&eacute;ho oblouku.</li></ul></dd></dl>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainLock.svg&amp;filetimestamp=20240101173404&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainLock.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainLock.html" title="Sketcher ConstrainLock">Lock Position</a>: Applies <a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">horizontal dimension</a> and <a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">vertical dimension</a> constraints to points. If a single point is selected the constraints reference the origin of the sketch. If two or more points are selected the constraints reference the last point in the selection.</li></ul></dd></dl>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainLock.svg&amp;filetimestamp=20240101173404&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainLock.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainLock.html" title="Sketcher ConstrainLock">Zamknout polohu</a>: Pou&#382;ije vazbu <a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">horizont&aacute;ln&iacute; rozm&#283;r</a> a <a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">vertik&aacute;ln&iacute; rozm&#283;r</a> na body. Pokud je vybr&aacute;n jeden bod, omezen&iacute; odkazuj&iacute; na po&#269;&aacute;tek n&aacute;&#269;rtu. Pokud jsou vybr&aacute;ny dva nebo v&iacute;ce bod&#367;, omezen&iacute; odkazuj&iacute; na posledn&iacute; bod ve v&yacute;b&#283;ru.</li></ul></dd></dl>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainCoincidentUnified.svg&amp;filetimestamp=20240106131932&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainCoincidentUnified.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainCoincidentUnified.html" title="Sketcher ConstrainCoincidentUnified">Coincident Constraint (Unified)</a>: Creates a coincident constraint between points, fixes points on edges or axes, or creates a concentric constraint. It combines the <a href="../Sketcher_ConstrainCoincident.html" title="Sketcher ConstrainCoincident">Coincident Constraint</a> and <a href="../Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject">Point-On-Object Constraint</a> tools. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 </div>
@@ -684,13 +682,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118121057
+Cached time: 20260118121257
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.401 seconds
-Real time usage: 0.681 seconds
-Preprocessor visited node count: 1493/1000000
+CPU time usage: 0.459 seconds
+Real time usage: 0.601 seconds
+Preprocessor visited node count: 1492/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -700,19 +698,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   51.249      1 -total
- 24.54%   12.578      1 Template:Sketcher_Tools_navi/cs
- 14.84%    7.606     34 Template:Version
- 11.58%    5.933      1 Template:PropertyView
- 10.46%    5.362      2 Template:Navigation_menu_2
-  9.99%    5.122      1 Template:Userdocnavi/cs
-  6.64%    3.402      1 Template:Variable
-  5.72%    2.932      6 Template:Caption
-  5.44%    2.790      8 Template:VersionPlus
-  3.94%    2.019      2 Template:Docnav
+100.00%   54.598      1 -total
+ 36.58%   19.972      1 Template:Sketcher_Tools_navi/cs
+ 19.64%   10.721      1 Template:Userdocnavi/cs
+ 19.20%   10.482      2 Template:Navigation_menu_2
+  8.56%    4.672      1 Template:PropertyView
+  4.93%    2.690     34 Template:Version
+  4.55%    2.485      8 Template:VersionPlus
+  4.20%    2.293      1 Template:Variable
+  3.87%    2.112      2 Template:Docnav
+  3.61%    1.971     14 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118121056 and revision id 1740404. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118121256 and revision id 1740409. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
