--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -40,7 +40,7 @@
 </p><p><span id="Edit_object_description"></span>
 </p>
 <h3><span id=".D0.A0.D0.B5.D0.B4.D0.B0.D0.BA.D1.82.D0.B8.D1.80.D0.B0.D0.BD.D0.B5_.D0.BE.D0.BF.D0.B8.D1.81.D0.B0.D0.BD.D0.B8.D0.B5.D1.82.D0.BE_.D0.BD.D0.B0_.D0.BE.D0.B1.D0.B5.D0.BA.D1.82"></span><span class="mw-headline" id="&#1056;&#1077;&#1076;&#1072;&#1082;&#1090;&#1080;&#1088;&#1072;&#1085;&#1077;_&#1086;&#1087;&#1080;&#1089;&#1072;&#1085;&#1080;&#1077;&#1090;&#1086;_&#1085;&#1072;_&#1086;&#1073;&#1077;&#1082;&#1090;">&#1056;&#1077;&#1076;&#1072;&#1082;&#1090;&#1080;&#1088;&#1072;&#1085;&#1077; &#1086;&#1087;&#1080;&#1089;&#1072;&#1085;&#1080;&#1077;&#1090;&#1086; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;</span></h3>
-<p>An object can optionally have a description. This information is stored in its <span style="font-size:60%; padding-right:0.8em;">&#1044;&#1072;&#1085;&#1085;&#1080;</span><b>Label2</b> property. If the description column is displayed you can edit this property by selecting an object in that column and pressing <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">F2</span> (on Windows and Linux), or <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Enter</span> (on macOS). The property can also be changed in the <a href="../Property_View.html" title="Property View">Property View</a>.
+<p>&#1054;&#1073;&#1077;&#1082;&#1090; &#1084;&#1086;&#1078;&#1077; &#1087;&#1086; &#1078;&#1077;&#1083;&#1072;&#1085;&#1080;&#1077; &#1076;&#1072; &#1080;&#1084;&#1072; &#1086;&#1087;&#1080;&#1089;&#1072;&#1085;&#1080;&#1077;. &#1058;&#1072;&#1079;&#1080; &#1080;&#1085;&#1092;&#1086;&#1088;&#1084;&#1072;&#1094;&#1080;&#1103; &#1089;&#1077; &#1089;&#1098;&#1093;&#1088;&#1072;&#1085;&#1103;&#1074;&#1072; &#1074; &#1085;&#1077;&#1075;&#1086;&#1074;&#1080;&#1103; <span style="font-size:60%; padding-right:0.8em;">&#1044;&#1072;&#1085;&#1085;&#1080;</span><b>Label2</b>. &#1040;&#1082;&#1086; &#1089;&#1077; &#1074;&#1080;&#1078;&#1076;&#1072; &#1082;&#1086;&#1083;&#1086;&#1085;&#1072;&#1090;&#1072; &#1079;&#1072; &#1086;&#1087;&#1080;&#1089;&#1072;&#1085;&#1080;&#1077;, &#1084;&#1086;&#1078;&#1077;&#1090;&#1077; &#1076;&#1072; &#1088;&#1077;&#1076;&#1072;&#1082;&#1090;&#1080;&#1088;&#1072;&#1090;&#1077; &#1080; &#1082;&#1072;&#1090;&#1086; &#1080;&#1079;&#1073;&#1077;&#1088;&#1077;&#1090;&#1077; &#1086;&#1073;&#1077;&#1082;&#1090; &#1074; &#1090;&#1072;&#1079;&#1080; &#1082;&#1086;&#1083;&#1086;&#1085;&#1072; &#1080; &#1085;&#1072;&#1090;&#1080;&#1089;&#1085;&#1077;&#1090;&#1077; <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">F2</span> (&#1085;&#1072; Windows &#1080; Linux), &#1080;&#1083;&#1080; <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Enter</span> (&#1085;&#1072; macOS). &#1057;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1086;&#1090;&#1086; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1073;&#1098;&#1076;&#1077; &#1087;&#1088;&#1086;&#1084;&#1077;&#1085;&#1077;&#1085;&#1086; &#1080; &#1074; <a href="../Property_View.html" title="Property View">Property View</a>.
 </p>
 <h3><span class="mw-headline" id="Context_menu">Context menu</span></h3>
 <p>The options in the context menu of the Tree View depend on the selected object(s) and the currently active workbench. To display this menu right-click the background of the list, right-click an object in the list, or select multiple objects in the list and then right-click one of them.
@@ -159,12 +159,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118121111
+Cached time: 20260118121402
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.124 seconds
-Real time usage: 0.186 seconds
+CPU time usage: 0.164 seconds
+Real time usage: 0.226 seconds
 Preprocessor visited node count: 750/1000000
 Post&#8208;expand include size: 38475/2097152 bytes
 Template argument size: 12431/2097152 bytes
@@ -175,19 +175,19 @@ Unstrip post&#8208;expand size: 2222/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   33.979      1 -total
- 25.30%    8.595      1 Template:Std_Base_navi/bg
- 21.77%    7.397      3 Template:Navigation_menu_2
- 13.10%    4.450      1 Template:Interface_navi/bg
- 11.97%    4.069      1 Template:Userdocnavi/bg
-  9.86%    3.350      2 Template:PropertyData
-  6.10%    2.073      3 Template:Variable
-  5.98%    2.033      1 Template:PropertyView
-  5.07%    1.724     19 Template:KEY
-  4.97%    1.688      6 Template:MenuCommand
+100.00%   52.604      1 -total
+ 28.59%   15.041      1 Template:Std_Base_navi/bg
+ 18.07%    9.503      1 Template:Interface_navi/bg
+ 16.87%    8.874      3 Template:Navigation_menu_2
+ 12.05%    6.338      1 Template:Userdocnavi/bg
+  8.49%    4.465      2 Template:PropertyData
+  5.42%    2.853      3 Template:Variable
+  4.95%    2.604      6 Template:MenuCommand
+  4.64%    2.443     19 Template:KEY
+  4.53%    2.384      1 Template:PropertyView
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260118121111 and revision id 1740407. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260118121401 and revision id 1740411. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
