--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -45,8 +45,9 @@
 </p>
 <h3><span id=".D0.9A.D0.BE.D0.BD.D1.82.D0.B5.D0.BA.D1.81.D1.82.D0.BD.D0.BE_.D0.BC.D0.B5.D0.BD.D1.8E"></span><span class="mw-headline" id="&#1050;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1085;&#1086;_&#1084;&#1077;&#1085;&#1102;">&#1050;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1085;&#1086; &#1084;&#1077;&#1085;&#1102;</span></h3>
 <p>&#1054;&#1087;&#1094;&#1080;&#1080;&#1090;&#1077; &#1074; &#1082;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1085;&#1086;&#1090;&#1086; &#1084;&#1077;&#1085;&#1102; &#1085;&#1072; &#1076;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1085;&#1080;&#1103; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076; &#1079;&#1072;&#1074;&#1080;&#1089;&#1103;&#1090; &#1086;&#1090; &#1080;&#1079;&#1073;&#1088;&#1072;&#1085;&#1080;&#1103; &#1086;&#1073;&#1077;&#1082;&#1090; (&#1080;) &#1080; &#1072;&#1082;&#1090;&#1080;&#1074;&#1085;&#1072;&#1090;&#1072; &#1074; &#1084;&#1086;&#1084;&#1077;&#1085;&#1090;&#1072; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1072; &#1084;&#1072;&#1089;&#1072;. &#1047;&#1072; &#1076;&#1072; &#1087;&#1086;&#1082;&#1072;&#1078;&#1077;&#1090;&#1077; &#1090;&#1086;&#1074;&#1072; &#1084;&#1077;&#1085;&#1102; &#1097;&#1088;&#1072;&#1082;&#1085;&#1077;&#1090;&#1077; &#1089; &#1076;&#1077;&#1089;&#1085;&#1080;&#1103; &#1073;&#1091;&#1090;&#1086;&#1085; &#1085;&#1072; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072; &#1074;&#1098;&#1088;&#1093;&#1091; &#1092;&#1086;&#1085;&#1072; &#1085;&#1072; &#1089;&#1087;&#1080;&#1089;&#1098;&#1082;&#1072;, &#1097;&#1088;&#1072;&#1082;&#1085;&#1077;&#1090;&#1077; &#1089; &#1076;&#1077;&#1089;&#1085;&#1080;&#1103; &#1073;&#1091;&#1090;&#1086;&#1085; &#1074;&#1098;&#1088;&#1093;&#1091; &#1086;&#1073;&#1077;&#1082;&#1090; &#1074; &#1089;&#1087;&#1080;&#1089;&#1098;&#1082;&#1072; &#1080;&#1083;&#1080; &#1080;&#1079;&#1073;&#1077;&#1088;&#1077;&#1090;&#1077; &#1085;&#1103;&#1082;&#1086;&#1083;&#1082;&#1086; &#1086;&#1073;&#1077;&#1082;&#1090;&#1072; &#1074; &#1089;&#1087;&#1080;&#1089;&#1098;&#1082;&#1072; &#1080; &#1089;&#1083;&#1077;&#1076; &#1090;&#1086;&#1074;&#1072; &#1097;&#1088;&#1072;&#1082;&#1085;&#1077;&#1090;&#1077; &#1089; &#1076;&#1077;&#1089;&#1085;&#1080;&#1103; &#1073;&#1091;&#1090;&#1086;&#1085; &#1074;&#1098;&#1088;&#1093;&#1091; &#1077;&#1076;&#1080;&#1085; &#1086;&#1090; &#1090;&#1103;&#1093;.
+</p><p><span id="Keyboard_modifiers"></span>
 </p>
-<h3><span class="mw-headline" id="Keyboard_modifiers">Keyboard modifiers</span></h3>
+<h3><span id=".D0.9C.D0.BE.D0.B4.D0.B8.D1.84.D0.B8.D0.BA.D0.B0.D1.82.D0.BE.D1.80.D0.B8_.D0.BD.D0.B0_.D0.BA.D0.BB.D0.B0.D0.B2.D0.B8.D0.B0.D1.82.D1.83.D1.80.D0.B0.D1.82.D0.B0"></span><span class="mw-headline" id="&#1052;&#1086;&#1076;&#1080;&#1092;&#1080;&#1082;&#1072;&#1090;&#1086;&#1088;&#1080;_&#1085;&#1072;_&#1082;&#1083;&#1072;&#1074;&#1080;&#1072;&#1090;&#1091;&#1088;&#1072;&#1090;&#1072;">&#1052;&#1086;&#1076;&#1080;&#1092;&#1080;&#1082;&#1072;&#1090;&#1086;&#1088;&#1080; &#1085;&#1072; &#1082;&#1083;&#1072;&#1074;&#1080;&#1072;&#1090;&#1091;&#1088;&#1072;&#1090;&#1072;</span></h3>
 <p>The usual keyboard modifiers can be used in the Tree View. The modifiers can be combined as well.
 </p>
 <ul><li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>: hold down this key to select multiple objects.</li>
@@ -160,13 +161,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118121604
+Cached time: 20260118121700
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.121 seconds
-Real time usage: 0.174 seconds
-Preprocessor visited node count: 751/1000000
+CPU time usage: 0.165 seconds
+Real time usage: 0.219 seconds
+Preprocessor visited node count: 752/1000000
 Post&#8208;expand include size: 38475/2097152 bytes
 Template argument size: 12431/2097152 bytes
 Highest expansion depth: 7/100
@@ -176,19 +177,19 @@ Unstrip post&#8208;expand size: 2222/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.780      1 -total
- 21.52%    7.483      1 Template:Std_Base_navi/bg
- 20.53%    7.141      3 Template:Navigation_menu_2
- 18.94%    6.589      1 Template:Interface_navi/bg
- 17.13%    5.958      1 Template:Userdocnavi/bg
-  7.94%    2.761      2 Template:PropertyData
-  6.25%    2.173      1 Template:TOCright
-  4.91%    1.709      3 Template:Variable
-  4.40%    1.530      2 Template:Caption
-  4.30%    1.496      1 Template:PropertyView
+100.00%   42.966      1 -total
+ 30.10%   12.934      1 Template:Std_Base_navi/bg
+ 21.49%    9.234      3 Template:Navigation_menu_2
+ 16.12%    6.925      1 Template:Interface_navi/bg
+ 12.70%    5.457      1 Template:Userdocnavi/bg
+  8.69%    3.734      2 Template:PropertyData
+  5.34%    2.296      3 Template:Variable
+  4.52%    1.942      1 Template:PropertyView
+  4.45%    1.911     19 Template:KEY
+  3.85%    1.656      1 Template:FALSE
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260118121603 and revision id 1740415. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260118121700 and revision id 1740419. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
