--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -170,9 +170,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainAngle.svg&amp;filetimestamp=20240101173744&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainAngle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainAngle.html" title="Sketcher ConstrainAngle">Rozm&#283;r &uacute;hlu</a>: Ur&#269;uje &uacute;hel mezi dv&#283;ma hranami, &uacute;hel p&#345;&iacute;mky s vodorovnou osou n&aacute;&#269;rtu nebo &uacute;hel otev&#345;en&iacute; kruhov&eacute;ho oblouku.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainLock.svg&amp;filetimestamp=20240101173404&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainLock.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainLock.html" title="Sketcher ConstrainLock">Zamknout polohu</a>: Pou&#382;ije vazbu <a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">horizont&aacute;ln&iacute; rozm&#283;r</a> a <a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">vertik&aacute;ln&iacute; rozm&#283;r</a> na body. Pokud je vybr&aacute;n jeden bod, omezen&iacute; odkazuj&iacute; na po&#269;&aacute;tek n&aacute;&#269;rtu. Pokud jsou vybr&aacute;ny dva nebo v&iacute;ce bod&#367;, omezen&iacute; odkazuj&iacute; na posledn&iacute; bod ve v&yacute;b&#283;ru.</li></ul></dd></dl>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainCoincidentUnified.svg&amp;filetimestamp=20240106131932&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainCoincidentUnified.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainCoincidentUnified.html" title="Sketcher ConstrainCoincidentUnified">Soub&#283;&#382;n&eacute; omezen&iacute; (sjednocen&iacute;)</a>: Vytvo&#345;&iacute; soub&#283;&#382;nou vazbu mezi body, zafixuje body na hran&aacute;ch nebo os&aacute;ch nebo vytvo&#345;&iacute; soust&#345;ednou vazbu. Kombinuje n&aacute;stroje <a href="../Sketcher_ConstrainCoincident.html" title="Sketcher ConstrainCoincident">Vazbu soub&#283;&#382;nosti</a> a <a href="../Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject">Vazbu bodu na objektu</a>. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainCoincident.svg&amp;filetimestamp=20240101173005&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainCoincident.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainCoincident.html" title="Sketcher ConstrainCoincident">Coincident Constraint</a>: Creates a coincident constraint between points, or a concentric constraint.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainCoincident.svg&amp;filetimestamp=20240101173005&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainCoincident.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainCoincident.html" title="Sketcher ConstrainCoincident">Soub&#283;&#382;n&aacute; vazba</a>: Vytvo&#345;&iacute; soub&#283;&#382;nou vazbu mezi body nebo soust&#345;ednou vazbu.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainPointOnObject.svg&amp;filetimestamp=20240101173043&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainPointOnObject.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject">Point-On-Object Constraint</a>: Fixes points on edges or axes.</li></ul>
 </div>
@@ -680,13 +678,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118121632
+Cached time: 20260118121818
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.454 seconds
-Real time usage: 0.635 seconds
-Preprocessor visited node count: 1491/1000000
+CPU time usage: 0.377 seconds
+Real time usage: 0.555 seconds
+Preprocessor visited node count: 1490/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -696,19 +694,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.509      1 -total
- 21.84%    8.409      1 Template:Sketcher_Tools_navi/cs
- 14.18%    5.460      2 Template:Navigation_menu_2
- 10.96%    4.219      1 Template:Userdocnavi/cs
-  8.88%    3.421      1 Template:PropertyView
-  7.32%    2.820     34 Template:Version
-  7.19%    2.768      2 Template:Docnav
-  7.17%    2.762      6 Template:Caption
-  6.80%    2.620      8 Template:VersionPlus
-  5.85%    2.253     14 Template:KEY
+100.00%   40.763      1 -total
+ 23.98%    9.775      1 Template:Sketcher_Tools_navi/cs
+ 14.58%    5.945      2 Template:Navigation_menu_2
+ 13.12%    5.347      1 Template:Userdocnavi/cs
+  8.50%    3.466      1 Template:PropertyView
+  7.79%    3.174     34 Template:Version
+  6.71%    2.737      6 Template:Caption
+  6.42%    2.618      8 Template:VersionPlus
+  6.03%    2.459      2 Template:Docnav
+  4.98%    2.032     14 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118121631 and revision id 1740417. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118121817 and revision id 1740421. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
